Body width overflowing bug 2

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,16 +1,17 @@
 html, body {
   min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 html {
   height: 100%;
 }
 body {
   position: relative;
-  max-width: 100%;
-  overflow: hidden;
   padding-bottom: $footer-hight;
   font-family: $font-ubuntu;
   font-weight: 300;
+  -webkit-text-size-adjust: 100%;
 
   @include media-breakpoint-up(lg) {
     padding-bottom: 80px;
